--- a/NotesApp/NotesApp.html
+++ b/NotesApp/NotesApp.html
@@ -8,19 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="head">
         <div class="container">
             <div class="heading">
-                <div class="text"><i class="fa-sharp fa-solid fa-pen-to-square"></i><span><b>Notes</b></span></div>
+                <div class="heading-value"><i class="fa-sharp fa-solid fa-pen-to-square"></i><b>Notes</b></div>
             </div>
-    
-            <div class="button">
-                <button class="btn" type="button"><i class="fa-solid fa-pencil"></i><span>Create Notes</span></button>
+            <div class="add-button-div">
+                <button class="add-button" onclick="AddNode()"><i class="fa-solid fa-pencil"></i><span>Create Notes</span></button>
+            </div>
+            <div id="inputArea">
             </div>
         </div>
-    </div>
-    <script type="text/javascript" src="NotesApp.js">
-
-    </script>
+    <script type="text/javascript" src="NotesApp.js"></script>
 </body>
 </html>
